[project]
name = "ruly"
version = "0.1.0"
urls = {"GitHub" = "https://github.com/zlatsic/ruly", "Docs" = "https://ruly.readthedocs.io/en/latest/" }
authors = [ { "name" = "Zlatan SiÄanica", "email" = "zlatan.sicanica@gmail.com" }]
description = "Simple, extensible rule engine in Python"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "dataclasses >= 0.6"
]

[tool.black]
line-length = 79
